--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   gnome-clocks-3.16.1.tar.xz: a4b7ffdf87535565c094422377415650135f1a89
+sources:
+  gnome-clocks-3.18.0.tar.xz: ed265d06e08032c2bf5bede14f89c6df5504acf0
